--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
-html, body { font-family: "Helvetica", Arial, sans-serif; margin: 0; padding: 0; }
+html, body { font-family: 'Dosis', sans-serif;  margin: 0; padding: 0; font-size: 100%; }
 
+
+/*
+font-family: 'Dosis', sans-serif;
+font-family: 'BenchNine', sans-serif;
+font-family: 'Quicksand', sans-serif;
+*/
 
 #app { width: 100%; height: 100%; overflow: hidden; position: relative }
-.panel { width: 100%; height: 100%; position: absolute; display: none; }
+.panel { width: 100%; height: 100%; position: absolute; display: none; background: #fafafa; }
+
+h1 { color: #4d6171; text-align: center; font-size: 2em; }
+h1 span { color: #8a9db7; font-size: 0.8em; }
+
+.panel-contents { width: 90%; height: 90%; margin: 2% auto 0; border: 1px solid #fff; border-radius: 1em; box-shadow: 0 1px 3px #ccc; position: relative; }
+
+#main-panel .top-left { font-size: 16px; top: 50px; left: 15px; position: absolute; }
+#main-panel .temp { width: 100%; position: absolute; top: 80px; left: 0; font-size: 86px; text-align: center; font-weight: 100; }
+#main-panel .temp span { position: absolute; top: 0; right: 33%; font-size: 24px; font-weight: bold; }
+#main-panel .sky { width: 100%; position: absolute; left: 0; border: 1px solid red; top: 200px; }
+#main-panel .more-info { position: absolute; width: 100%; left: 0; bottom: 0;  }
+#days-panel { }
