--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ font-family: 'Dosis', sans-serif;
 font-family: 'BenchNine', sans-serif;
 font-family: 'Quicksand', sans-serif;
 */
+
+#app { background: url(../img/bg3.jpg) no-repeat center center; background-size: cover; }
+
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
@@ -17,12 +20,12 @@ font-family: 'Quicksand', sans-serif;
 }
 
 #app { width: 100%; height: 100%; overflow: hidden; position: relative }
-.panel { width: 100%; height: 100%; position: absolute; display: none; background: #fafafa; }
+.panel { width: 90%; height: 80%; position: absolute; display: none; background: #fafafa; left: 5%; top: 10%; }
 
 h1 { color: #4d6171; text-align: center; font-size: 2em; }
 h1 span { color: #8a9db7; font-size: 0.8em; }
 
-.panel-contents { width: 90%; height: 90%; margin: 2% auto 0; border: 1px solid #fff; border-radius: 1em; box-shadow: 0 1px 3px #ccc; position: relative; }
+.panel-contents { width: 100%; height: 100%; position: relative; }
 
 #main-panel .top-left { font-size: 16px; top: 30px; left: 15px; position: absolute; }
 #main-panel .top-left .city-date { margin: 0; font-size: 0.9em; }
