--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,14 @@ font-family: 'Quicksand', sans-serif;
 .hidden { display: none; }
 
 #app { width: 100%; height: 100%; overflow: hidden; position: relative }
-.panel { width: 90%; height: 80%; position: absolute; display: none; background: #fafafa; left: 5%; top: 10%; bpx }
+.panel { width: 90%; height: 80%; position: absolute; display: none; background: #fafafa; left: 5%; top: 5%; }
 
 h1 { color: #4d6171; text-align: center; font-size: 2em; }
 h1 span { color: #8a9db7; font-size: 0.8em; }
 
 .panel-contents { width: 100%; height: 100%; position: relative; }
+.top-left, .top-panel { font-size: 16px; width: 100%; height: 30px; background: #6babee; border-top: 1px solid #7bbbfe; padding: 10px 0 0; border-bottom: 1px solid #999; text-align: center; color: #ebebeb; text-shadow: 0 1px 0 #333; }
 
-#main-panel .top-left { font-size: 16px; width: 100%; height: 30px; background: #6babee; border-top: 1px solid #7bbbfe; padding: 10px 0 0; border-bottom: 1px solid #999; text-align: center; color: #ebebeb; text-shadow: 0 1px 0 #333; }
 #main-panel .top-left .city-date { margin: 0; font-size: 1em; }
 #main-panel .top-left .now { padding: 0 5px 0 0; text-transform: uppercase; font-weight: bold; }
 #main-panel .temp-wrap { position: relative; height: 136px;  }
@@ -47,20 +47,21 @@ h1 span { color: #8a9db7; font-size: 0.8em; }
 #main-panel .more-info { margin: 30px 0 0; }
 #main-panel .more-info p { text-align: right; margin: 0 20px 10px 0; font-size: 0.9em; max-width: 60%; line-height: 1.3em; float: right; clear: both; }
 
-
-#days-panel { }
-#days-panel .panel-contents { padding-top: 50px; }
-#days-panel .day { width: 95%; border-top: 1px solid #ffffff; border-bottom: 1px solid #f1f1f1; }
-#days-panel .date { float: left; padding: 15px 30px 0 10px; }
-#days-panel .sky { float: left; width: 150px; height: 80px; margin: 10px 5px 0 15px; }
-#days-panel .temp { position: relative; float: left; font-size: 32px; padding: 20px 10px 0 20px;  }
-#days-panel .temp span { position: absolute; top: 30%; right: -2%; font-size: 12px; font-weight: bold; }
-#days-panel .more-info { clear: both; }
-#days-panel .more-info p { float: left; width: 40%; padding: 10px; margin: 0; }
-
 #settings-panel { text-align: center; font-size: 12px; }
 
+#days-panel .top-panel { text-align: left; height: 20px; padding: 3px 0 0; text-indent: 20px; margin: 0 0 5px 0; }
+#days-panel .days-temp_c { width: 25%; position: relative; text-align: center; float: left;}
+#days-panel .days-temp_c .value { font-size: 50px; text-align: center; }
+#days-panel .days-temp_c .value:after  { content: "o"; font-size: 20px; font-family: Arial, sans-serif; right: 10px; top: 5px; position: absolute; }
+
+#days-panel article { padding: 0px 0 20px; }
+#days-panel .days-more-info { float: left; width: 60%; margin-left: 20px; }
+#days-panel .days-more-info p { margin: 0 5px 3px 0; font-size: 0.8em;  }
+
 .sky .sky-image { width: 100%; height: 128px; }
+
+.sky .sky-6 { background: url(../images/tick/light_rain.png) no-repeat center center; }
 .sky .sky-8 { background: url(../images/tick/sunny.png) no-repeat center center; }
 .sky .sky-23 { background: url(../images/tick/cloudy1.png) no-repeat center center; }
+.sky .sky-17 { background: url(../images/tick/cloudy2.png) no-repeat center center; }
 .sky .sky-14 { background: url(../images/tick/cloudy4.png) no-repeat center center;  }
