--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,16 @@ h1 span { color: #8a9db7; font-size: 0.8em; }
 #days-panel .days-more-info p { margin: 0 5px 3px 0; font-size: 0.8em;  }
 
 #second-location { position: absolute; }
+#second-location form { text-align: center; }
+#second-location form input[type='text'] { border: 1px solid #ababab; border-radius: 5px; text-indent: 5px;}
+
+#second-location .loc2-temp { float: left; width: 40%; text-align: center; }
+#second-location .loc2-temp .value { font-size: 48px; text-align: center; position: relative; padding: 20px 0 0; } 
+#second-location .loc2-temp .value:after  { content: "o"; font-size: 20px; font-family: Arial, sans-serif; right: -10px; top: 25px; position: absolute; }
+#second-location .sky { width: 40%; float: right; }
+#second-location .more-info { clear: both; width: 90%; text-align: right; padding: 10px 0 0; }
+
+#second-location .second-loc-heading { font-size: 12px; text-align: center; margin: 5px 0 10px; }
 
 .sky .sky-image { width: 100%; height: 128px; }
 
