--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h1 span { color: #8a9db7; font-size: 0.8em; }
 #main-panel .sky { width: 100%;  left: 0;  margin: 20px 0 0; }
 #main-panel .sky .image { width: 220px; height: 150px; margin: 0  auto; }
 #main-panel .sky p { margin: 0; text-align: center; padding: 0 5px 5px; }
-#main-panel .more-info { margin: 30px 0 0;  }
+#main-panel .more-info { margin: 30px 0 0; display: none; }
 #main-panel .more-info p { text-align: right; margin: 0 20px 10px 0; font-size: 0.9em; max-width: 60%; line-height: 1.3em; float: right; clear: both; }
 
 #settings-panel { text-align: center; font-size: 12px; top: 110%; }
