--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,9 @@ h1 span { color: #8a9db7; font-size: 0.8em; }
 #settings-panel .api .image img { width: 50%; height: 50%; margin: 0 auto; }
 
 #days-panel { position: absolute; left: 110%; }
-#days-panel .top-panel { text-align: left; height: 20px; padding: 3px 0 0; text-indent: 20px; margin: 0 0 5px 0; }
+#days-panel .top-panel { text-align: left; height: 17px; padding: 1px 0 0; text-indent: 20px; margin: 0 0 5px 0; }
 #days-panel .temp_c_high { width: 25%; position: relative; text-align: center; float: left;}
-#days-panel .temp_c_high .value { font-size: 50px; text-align: center; }
+#days-panel .temp_c_high .value { font-size: 40px; text-align: center; }
 #days-panel .temp_c_high .value:after  { content: "o"; font-size: 20px; font-family: Arial, sans-serif; top: 5px; position: absolute; }
 #days-panel .temp_c_high .label { margin: 0; }
 
@@ -66,9 +66,10 @@ h1 span { color: #8a9db7; font-size: 0.8em; }
 #days-panel .temp_c_low { margin: 0; display: none; }
 #days-panel .temp_c_low .label { margin: 0; }
 
-#days-panel article { padding: 0px 0 20px; }
-#days-panel .more-info { float: left; width: 60%; margin-left: 20px; max-height: 85px; overflow: scroll; }
-#days-panel .more-info p { margin: 0 5px 3px 0; font-size: 0.8em;  }
+#days-panel article { padding: 0px 0 10px; }
+#days-panel .more-info { float: left; width: 60%; margin-left: 20px;  overflow: scroll; }
+#days-panel .more-info p { margin: 0 5px 3px 0; font-size: 0.7em;  }
+#days-panel .top-panel { font-size: 14px; }
 
 #second-location { position: absolute; }
 #second-location form { text-align: center; }
